// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`social-media/upload-from-url/mock single video Publish the Post video gets published 1`] = `
Ok {
  "value": Object {
    "postId": "11111111",
    "url": "https://example.com/",
  },
}
`;

exports[`social-media/upload-from-url/mock single video RegisterUpload should return an id 1`] = `
Ok {
  "value": Object {
    "uploadId": "125682506616099",
  },
}
`;
